[gd_scene load_steps=5 format=3 uid="uid://cwf3k46lh4qtx"]

[ext_resource type="Script" path="res://ball.gd" id="1_ddjtr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rtrnl"]
friction = 5.0
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_8gxkr"]
radius = 0.261178

[sub_resource type="SphereMesh" id="SphereMesh_1sqci"]
radius = 0.25
height = 0.5

[node name="Ball" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_rtrnl")
script = ExtResource("1_ddjtr")

[node name="BallShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8gxkr")

[node name="BallMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_1sqci")

[node name="FinishedMovingTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="OBTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[connection signal="ball_stopped" from="." to="." method="_on_ball_stopped"]
[connection signal="timeout" from="FinishedMovingTimer" to="." method="_on_finished_moving_timer_timeout"]
[connection signal="timeout" from="OBTimer" to="." method="_on_ob_timer_timeout"]
